Fixed layout issues in chrome. Changed logo format to fix pixelation issues on Apple devices. Added certifications logos and links.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -390,6 +390,9 @@ body {
   font-weight: 700;
   text-transform: uppercase;
 }
+.device-notification--logo img {
+  max-width: 50px;
+}
 .device-notification--message {
   width: 70%;
   margin: 30px 0 0 0;
@@ -443,7 +446,7 @@ body {
   left: 0;
   display: flex;
   width: 100%;
-  height: 70px;
+  height: 72px;
   align-items: center;
   justify-content: space-between;
   z-index: 10;
@@ -467,6 +470,9 @@ body {
   .header--logo p {
     font-size: 10px;
   }
+}
+.header--logo img {
+  max-width: 50px;
 }
 .header--nav-toggle {
   display: flex;
@@ -705,6 +711,10 @@ body {
     opacity: 100;
   }
 }
+.intro--text img {
+  height: 70px;
+  margin: 0 10px;
+}
 .intro--options {
   display: flex;
   justify-content: space-between;
@@ -799,7 +809,7 @@ body {
     max-height: 90px;
   }
 }
-@media (max-width: 660px) and (max-height: 650px) {
+@media (max-width: 660px) and (max-height: 580px) {
   .intro--banner img {
     display: none;
   }
@@ -821,6 +831,9 @@ body {
   .intro--options {
     display: none;
   }
+  .intro--text p {
+    font-size: 12px;
+  }
 }
 @media (max-height: 680px) {
   .intro--banner h1 {
@@ -832,6 +845,11 @@ body {
     top: 70px;
     max-width: 90px;
     max-height: 90px;
+  }
+}
+@media (max-height: 840px) {
+  .intro--text img {
+    display: none;
   }
 }
 @media (max-height: 440px) {
