--- a/assets/css/modules/_device-notification.sass
+++ b/assets/css/modules/_device-notification.sass
@@ -24,6 +24,9 @@
       font-weight: 700
       text-transform: uppercase
 
+    img
+      max-width: 50px
+
 
   &--message
     width: 70%
