--- a/assets/css/modules/_header.sass
+++ b/assets/css/modules/_header.sass
@@ -4,7 +4,7 @@
   left: 0
   display: flex
   width: 100%
-  height: 70px
+  height: 72px
   align-items: center
   justify-content: space-between
   z-index: 10
@@ -28,6 +28,9 @@
 
       @media (max-width: 620px)
         font-size: 10px
+
+    img
+      max-width: 50px
 
 
 
