--- a/assets/css/modules/_intro.sass
+++ b/assets/css/modules/_intro.sass
@@ -99,7 +99,12 @@
       100%
         opacity: 100
 
-  //&--text
+  &--text
+    img
+      height: 70px
+      margin: 0 10px
+
+
 
 
   &--options
@@ -124,6 +129,7 @@
 
     p
       margin-bottom: 0
+
 
 @media (max-width: 900px)
 
@@ -239,7 +245,7 @@
         max-height: 90px
 
 
-@media (max-width: 660px) and (max-height: 650px)
+@media (max-width: 660px) and (max-height: 580px)
 
   .intro
 
@@ -275,6 +281,11 @@
     &--options
       display: none
 
+    &--text
+      p
+        font-size: 12px
+
+
 @media (max-height: 680px)
 
   .intro
@@ -289,6 +300,16 @@
         top: 70px
         max-width: 90px
         max-height: 90px
+
+
+
+@media (max-height: 840px)
+
+  .intro
+
+    &--text
+      img
+        display: none
 
 @media (max-height: 440px)
 
